Modified one file

--- a/heyyy.html
+++ b/heyyy.html
@@ -108,6 +108,10 @@
   cursor: pointer;
 }
 
+.fix {
+  margin-top: 35px;
+}
+
 .text {
   font-family: monospace;
   width: 80%; 
@@ -169,7 +173,7 @@
 
   
   <div class="question-container" id="question-container">
-    <p>Are you excited to hear what I wanna say?</p>
+    <p class="fix" >Are you excited to hear what I wanna say?</p>
     <button class="button-choice" onclick="goToNewPage()">Yess babyyy!</button>
     <button class="button-choice" onclick="showModal()">No</button>
   </div>
