Fixed margin on question container

--- a/heyyy.html
+++ b/heyyy.html
@@ -22,13 +22,12 @@
   width: 70px;
   height: 70px;
   animation: grow 3s forwards;
-  margin-top: 10px;
   justify-self: center;
 }
 
 .heart-img {
   width: 100%;
-  height: 100%;
+  height: 80px;
   animation: growImage 3s forwards;
   transform-origin: center;
 }
@@ -50,6 +49,7 @@
   top: 65%;
   width: 90%;
   margin-left: 5px;
+  margin-top: 20px;
 }
 
 .question-container p {
