--- a/formymanss.html
+++ b/formymanss.html
@@ -15,6 +15,10 @@
             
         }
 
+        .container h1 {
+            margin-left: 10%;
+        }
+
         body p {
           font-size: large;
           font-weight: 300;
@@ -50,7 +54,7 @@
         #next-button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: red;
+            background-color: rgb(205, 92, 92);
             color: #fff;
             border: none;
             border-radius: 5px;
