--- a/iloveyou.html
+++ b/iloveyou.html
@@ -197,7 +197,7 @@
 
     
     function goToNewPage() {
-      window.location.href = 'formymanss.html'; 
+      window.location.href = 'index.html'; 
     }
 
    
